# laurus-llm-client-py

./: CHANGELOG.md  pyproject.toml
.github/workflows/: create-release-autobump.yml  python-package.yml
laurus_llm_client/: __init__.py  llm_client.py
